# shimmy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AWESOME_LIST_PROMOTIONS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPREHENSIVE_MOE_STREAMING_WHITEPAPER.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DCO.md  DEVELOPERS.md  Dockerfile  GOVERNANCE.md  GPU_ARCHITECTURE_DECISION.md  LICENSE  LOCAL_MOE_STREAMING_VALIDATION.md  LOCAL_STREAMING_BENCHMARK_PROTOCOL.md  MLX_IMPLEMENTATION_PLAN.md  MOE_TEMPERATURE_SOLUTION.md  NOTICE  README-DOCKER.md  README.md  ROADMAP.md  SECURITY.md  SPEC_KIT_INTEGRATION.md  SPONSORS.md  V1.9.0_RELEASE_CHECKLIST.md  VISION_LICENSE_TEST_COVERAGE_ANALYSIS.md  bash.exe.stackdump  build-fix.md  build.rs  deny.toml  docker-compose.yml  execute_streaming_benchmarks.py  gpu-test-results-licensed.json  gpu-test-results.json  libvision_api_integration.rlib  (+6 more)
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md  vision-instructions.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  documentation.yml  enhancement.yml  feature_request.yml  performance.yml  question.yml  security.yml
.github/workflows/: ci.yml  dco-check.yml  experimental-macos-arm64-llama.yml  mlx-apple-silicon.yml  release-dry-run.yml  release.yml  test-release-binaries.yml  update-changelog.yml  version-validation.yml  vision-cross-platform-test.yml
.internal/: ANNOUNCEMENT_DRAFT.md  AUDIT-2025-10-03.md  BASELINE-RESULTS-GPT-OSS-20B.md  BASELINE-TESTING-STATUS.md  EXECUTION-PLAN-QUANTIZATION-TO-HF.md  HOSTILE_AUDIT_SPEC_KIT_v1.md  HUGGINGFACE-AUDIT-2025-10-09.md  ISSUE_ANALYSIS.md  Issue_108_Response.md  LOCAL_GITHUB_ACTIONS_GUIDE.md  LOCAL_MOE_STREAMING_VALIDATION.md  LOCAL_STREAMING_BENCHMARK_PROTOCOL.md  MODEL-CARD-PLAN.md  MOE-COMPLETION-REPORT.md  MOE-DOCUMENTATION-STATUS.md  MOE-TESTING-STATUS.md  MOE-VALIDATION-CHECKLIST.md  MOE-WHITEPAPER-AUDIT-CHECKLIST.md  MOE_TEMPERATURE_SOLUTION.md  MoE_Fix_Forensic_Audit_Report.md  MoE_Fix_Forensic_Audit_Report_v2.md  PRODUCTION_LAUNCH_PROCESS.md  PRODUCTION_READINESS_PLAN.md  QUANTIZATION-PERFORMANCE-SUMMARY.md  QUANTIZATION-STATUS-REPORT.md  QUANTIZATION-TESTING-PLAN.md  QUANTIZATION-UPLOAD-COMPLETE.md  RELEASE_GATES_CHECKLIST.md  RELEASE_GATE_SYSTEM_VALIDATION.md  RELEASE_NOTES_v1.4.0.md  RELEASE_PREP_V1.7.2.md  SHIMMY_VISION_DEEP_DIVE.md  SHIMMY_VISION_EVALUATION.md  SPEC_KIT_RELEASE_PLAN.md  UPLOAD-COMMANDS.md  VISION_FUNCTIONAL_TEST_PLAN.md  VISION_PRIVATE_SPLIT_REPORT.md  VISION_PUNCH_LIST.md  plan-template.md  vision-bootstrap-checklist.md  (+1 more)
.internal/model-cards-source/: TEMPLATE-QUANTIZATION.md  deepseek-moe-16b-f16-cpu-offload-README.md  deepseek-moe-16b-q2-k-README.md  deepseek-moe-16b-q4-k-m-README.md  deepseek-moe-16b-q8-0-README.md  phi-3.5-moe-f16-cpu-offload-README.md  phi-3.5-moe-q2-k-README.md  phi-3.5-moe-q4-k-m-README.md  phi-3.5-moe-q8-0-README.md
.internal/scripts/: analyze-results.py
.internal/testing/: generation_output.json  performance_test.json
cloudflare-worker/: README.md  stripe-keygen-webhook.js  wrangler.toml
deploy/: Dockerfile  README.md  docker-compose.yml  fly.toml  nginx.conf  railway.toml  render.yaml
docs/: AUDIT-2025-10-03.md  CONFIGURATION.md  CROSS_COMPILATION.md  EXAMPLES.md  GATEWARDEN_ARCHITECTURE_PROMPT.md  GPU_ARCHITECTURE_DECISION.md  INTEGRATION.md  LLAMA-CPP-RS-FORK-VERIFICATION.md  MAC_TESTING_REPORT.md  METHODOLOGY.md  METRICS.md  MOE-CPU-OFFLOADING-WHITEPAPER.md  MOE-STRESS-TESTING-PROTOCOL.md  MOE-TECHNICAL-REPORT.md  MOE-TECHNICAL-VALIDATION.md  MOE-WHITEPAPER-CORRECTIONS.md  OPENAI_COMPAT.md  PERFORMANCE.md  SPEC_KIT_INTEGRATION.md  VISION_CROSS_PLATFORM_TESTING.md  VISION_FUNCTIONAL_TEST_PLAN.md  VISION_PRODUCTION_CHECKLIST.md  benchmarks.md  deepseek-moe-16b-cpu-offload-README.md  integrations.md  playground.html  ppt-invariant-testing.md  quickstart.md  shimmy-workspace.code-workspace  vision-timings.md
docs/benchmark-evidence/: README.md
docs/internal/: BASELINE-TESTING-STATUS.md  EXECUTION-PLAN-QUANTIZATION-TO-HF.md  HUGGINGFACE-AUDIT-2025-10-09.md  MODEL-CARD-PLAN.md  MOE-COMPLETION-REPORT.md  MOE-DOCUMENTATION-STATUS.md  MOE-TESTING-STATUS.md  MOE-VALIDATION-CHECKLIST.md  MOE-WHITEPAPER-AUDIT-CHECKLIST.md  QUANTIZATION-PERFORMANCE-SUMMARY.md  QUANTIZATION-TESTING-PLAN.md  QUANTIZATION-UPLOAD-COMPLETE.md  UPLOAD-COMMANDS.md
docs/releases/: RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.7.0.md
memory/: constitution.md  constitution_update_checklist.md
packaging/docker/: README.md  (+4 more)
scripts/: benchmark.bat  benchmark.py  benchmark.sh  configure-github-protection.sh  coverage.sh  dev-test.sh  dry-run-release.sh  generate-homebrew-formula.sh  install-hooks.sh  moe_stress_test.py  punch-analyze.sh  run-regression-tests.sh  setup-branch-protection.sh  test_cross_compiled_vision.py  test_vision_cross_platform.sh  update-changelog.sh  validate-release.ps1  validate-release.sh  verify-ppt-coverage.sh  vision_timing.py
shimmy-vision-private/: Cargo.toml
src/: anthropic_compat.rs  api.rs  auto_discovery.rs  cli.rs  discovery.rs  error.rs  invariant_ppt.rs  lib.rs  main.rs  openai_compat.rs  port_manager.rs  preloading.rs  safetensors_adapter.rs  server.rs  templates.rs  vision.rs  vision_adapter.rs  vision_license.rs  workflow.rs
target-gpu/: .rustc_info.json
templates/: integration_template.md  shimmy-spec-template.md
tests/: anthropic_api_integration_test.rs  api_error_handling_test.rs  apple_silicon_detection_test.rs  compilation_regression_test.rs  gpu_backend_tests.rs  gpu_layer_verification.rs  mlx_support_regression_test.rs  model_discovery_regression_test.rs  openai_api_real_tests.rs  packaging_regression_test.rs  regression.rs  regression_tests.rs  release_gate_integration.rs  streaming_regression_test.rs  template_compilation_regression_test.rs  template_compilation_test.rs  version_regression_test.rs  version_validation_regression_test.rs  vision_api_integration.rs  vision_keygen_live_tests.rs  vision_license_flow_tests.rs  vision_license_simple_tests.rs  vision_license_tests.rs  vision_tests.rs
(+933 files in other folders)
